<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_routines"
            android:icon="@drawable/ic_routines_24dp"
            android:title="@string/menu_routines" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_folder_24dp"
            android:title="@string/menu_stories" />
        <item
            android:id="@+id/nav_medical"
            android:icon="@drawable/ic_medical_24dp"
            android:title="@string/menu_medical" />
    </group>
</menu>
